<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".LoginFormActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include layout="@layout/custom_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/marginTop70dp"
        android:text="@string/form_connect_to_school"
        android:textColor="@color/white"
        android:textSize="@dimen/tvTextSize"
        android:padding="@dimen/tvPadding20dp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/marginBottom30dp"
        android:background="@color/colorPrimary"/>
    <EditText
        android:id="@+id/etUsername"
        android:hint="@string/enter_username"
        android:inputType="textCapSentences"
        style="@style/form_editText_style" />
    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/enter_email"
        style="@style/form_editText_style"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        style="@style/form_editText_style"/>
    <EditText
        android:id="@+id/etContactNo"
        android:hint="@string/enter_contact_no"
        android:inputType="number"
        android:maxLength="10"
        style="@style/form_editText_style"/>

        <LinearLayout
            android:id="@+id/linerLayout"
            style="@style/form_editText_style"
            android:background="@drawable/edittext_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_age"
                android:textSize="@dimen/dimen15sp"
                android:inputType="none" />


            <NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_margin="@dimen/dimen5dp"
                android:paddingBottom="@dimen/dimen0dp"/>


        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/round_button"
        android:layout_marginBottom="@dimen/dimen30dp"
        android:layout_marginTop="@dimen/dimen100dp"
        android:textSize="@dimen/dimen15sp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin70dp"
        android:layout_marginRight="@dimen/margin70dp"
        android:layout_marginStart="@dimen/margin70dp"
        android:layout_marginEnd="@dimen/margin70dp"

        style="@style/form_editText_style"/>

    </LinearLayout>


</ScrollView>