<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <include layout="@layout/custom_toolbar"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/imageMarginBottom"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/school"
        />


    <TextView
        android:text="@string/connect_to_school"
        app:layout_constraintBottom_toTopOf="@id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        style="@style/styleConnectSchool" />

    <TextView
        android:id="@+id/tvTerms"
        app:layout_constraintBottom_toTopOf="@id/loginBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        style="@style/styleTvTerms" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/tvCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTerms"
        style="@style/styleLoginbtn" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textSize="@dimen/textSize10sp"
        app:layout_constraintBottom_toTopOf="@id/tvRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/tvFooter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCreate"
        style="@style/styleTvRegister" />

    <TextView
        android:id="@+id/tvFooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        style="@style/styleTvFotter" />
</androidx.constraintlayout.widget.ConstraintLayout>